--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>unilab-2024</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css"/>
+   <link rel="stylesheet" href="scss/main.css">
 
     <!-- fonts -->
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   </head>
   <body>
-        
-
+        <header class="header">
+          hihi
+          <h1>nino</h1>
+        </header>
+        <main></main>
+        <footer></footer>
     <script src="js/script.js"></script>
   </body>
 </html>
