add files and styles for header

--- a/index.html
+++ b/index.html
@@ -4,24 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>unilab-2024</title>
-   <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="./css/main.css" />
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet" />
 
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   </head>
+
   <body>
-        <header class="header">
-          hihi
-          <h1>nino</h1>
-        </header>
-        <main></main>
-        <footer></footer>
+    <header class="header">
+      <div class="wrapper">
+        <div class="navigation">
+          <div class="logo"><a href="index.html">ExploreEra</a></div>
+          <nav class="nav">
+            <ul>
+              <li class="nav-item"><a class="item-link" href="#">Home</a></li>
+              <li class="nav-item">
+                <a class="item-link" href="#">About us</a>
+              </li>
+              <li class="nav-item"><a class="item-link" href="#">Blog</a></li>
+              <li class="nav-item">
+                <a class="item-link" href="#">Our services</a>
+              </li>
+              <li class="nav-item">
+                <a class="item-link" href="#">Our offers</a>
+              </li>
+              <li class="nav-item">
+                <a class="item-link" href="#">
+                  <i class="fa-regular fa-user"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero"></section>
+    </main>
+    <footer></footer>
     <script src="js/script.js"></script>
   </body>
 </html>
