add header styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <li class="nav-item">
                 <a class="item-link" href="#">Our offers</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item user-icon">
                 <a class="item-link" href="#">
                   <i class="fa-regular fa-user"></i
                 ></a>
