fix header hunc on scroll

--- a/index.html
+++ b/index.html
@@ -61,18 +61,24 @@
               <li class="signin__item">
                 <a class="signin__link" href="#">sign out</a>
               </li>
-              <li class="signin__item hidden">
-                <!-- mobile menu continue -->
-                <ul class="mobile-nav">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About us</a></li>
-                  <li><a href="#">Blogs</a></li>
-                  <li><a href="#">Our services</a></li>
-                  <li><a href="#">Our offers</a></li>
-                </ul>
-              </li>
             </ul>
           </nav>
+          
+            <!-- mobile menu continue -->
+            <ul class="mobile-menu hidden">
+              <li class="">
+                <a class="" href="#">sign in</a>
+              </li>
+              <li class="">
+                <a class="" href="#">sign up</a>
+              </li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Blogs</a></li>
+              <li><a href="#">Our services</a></li>
+              <li><a href="#">Our offers</a></li>
+            </ul>
+          
         </div>
       </div>
     </header>
