add burger menu

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                 <a class="signin__link" href="#">sign out</a>
               </li>
             </ul>
+            <!-- burger menu -->
+            <div id="burger-menu" class="burger-menu" onclick="openMobileMenu()">
+                            <span class="burger-menu__line"></span>
+                            <span class="burger-menu__line"></span>
+                            <span class="burger-menu__line"></span>
+                            <span class="burger-menu__line"></span>
+                        </div>
           </nav>
           
             <!-- mobile menu continue -->
