add burger functional

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
           <nav class="nav" id="nav">
             <ul class="nav__list">
               <li class="nav__list-item">
-                <a class="nav__list-link" href="#">Home</a>
+                <a class="nav__link" href="#">Home</a>
               </li>
               <li class="nav__list-item">
-                <a class="nav__list-link" href="#">About us</a>
+                <a class="nav__link" href="#">About us</a>
               </li>
               <li class="nav__list-item">
-                <a class="nav__list-link" href="#">Blog</a>
+                <a class="nav__link" href="#">Blog</a>
               </li>
               <li class="nav__list-item">
-                <a class="nav__list-link" href="#">Our services</a>
+                <a class="nav__link" href="#">Our services</a>
               </li>
               <li class="nav__list-item">
-                <a class="nav__list-link" href="#">Our offers</a>
+                <a class="nav__link" href="#">Our offers</a>
               </li>
               <li
                 class="nav__list-item user-icon"
                 onclick="openForm()"
                 id="user-icon">
-                <a class="nav__list-link" href="#">
+                <a class="nav__link" href="#">
                   <i class="fa-regular fa-user"></i>
                 </a>
               </li>
