add burger menu function

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </ul>
 
             <!-- mobile menu continue -->
-            <div class="mobile-menu" id="mobile-menu">
-              <div class="mobile-menu__navigation">
+            <div class="mobile-menu " id="mobile-menu">
+              <div class="mobile-menu__navigation hidden">
                 <ul class="mobile-menu__sign-in">
                   <li class="mobile-menu__item">
                     <a class="mobile-menu__link" href="#">sign in</a>
