add footer styles

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <div class="container">
         <div class="footer__inner">
           <div class="footer__block-1">
-            <div class="logo"><a href="index.html">ExploreEra</a></div>
-            <span>Travel agency which helps you to plan your perfect
+            <div class="footer__logo logo"><a href="index.html">ExploreEra</a></div>
+            <span class="description">Travel agency which helps you to plan your perfect
               holidays</span>
             <div class="social-icons">
               <h3 class="list-title">Follow us</h3>
@@ -131,7 +131,7 @@
             <h3 class="list-title">Links</h3>
             <ul class="nav-list">
               <li class="nav-list__item">
-                <a class="nav-list_link" href="#">HOME</a>
+                <a class="nav-list_link" href="#">Home</a>
               </li>
               <li class="nav-list__item">
                 <a class="nav-list_link" href="#">About us</a>
@@ -148,12 +148,12 @@
             </ul>
           </div>
           <div class="footer__block-3">
-            <h3 class="list-title"></h3>
-            <ul>
+            <h3 class="list-title">Contact us</h3>
+            <ul class="contact-list">
               <li>
-                <a href="mailto:exploreera@gmail.com">exploreera@gmail.com</a>
+                <a class="contact-link" href="mailto:exploreera@gmail.com">exploreera@gmail.com</a>
               </li>
-              <li><a href="tel:+555111222">555111222</a></li>
+              <li><a class="contact-link" href="tel:+555111222">555111222</a></li>
             </ul>
             <div>
               <form action="#" class="subscription">
