add hero section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
     </header>
     <div class="wrapper">
       <main class="main">
-        <section class="hero"></section>
+        <section class="hero">
+          <div class="hero__inner">
+            <h2 class="hero__title section-heding">Visit Mountains In <span>ITALY</span></h2>
+            <a class="hero__btn btn-primary" href="#">See more</a>
+          </div>
+        </section>
         <section class="section-2"></section>
       </main>
       <footer class="footer">
