add services section

--- a/index.html
+++ b/index.html
@@ -109,13 +109,56 @@
     </header>
     <div class="wrapper">
       <main class="main">
-        <section class="hero">
+        <section class="section hero">
           <div class="hero__inner">
-            <h2 class="hero__title section-heding">Visit Mountains In <span>ITALY</span></h2>
-            <a class="hero__btn btn-primary" href="#">See more</a>
+            <h2 class="section__title hero__title">Visit Mountains In <span>ITALY</span></h2>
+            <a class="hero__btn btn-primary" href="#">See offer</a>
           </div>
         </section>
-        <section class="section-2"></section>
+        <section class="section services">
+          <div class="container">
+            <div class="services__inner">
+              <h2 class="section__title services__title">Discover Our Services</h2>
+              <p class="section__description services__description">ExploreEra provides a one-stop solution for individuals seeking well-planned journeys. These services include expert advice on destination selection, flight and accommodation bookings, and customized itineraries to individual preferences.</p>
+             <a class="services__link" href="#">see all</a>
+              <div class="cards-wrapper">
+
+
+                <div class="card">
+                  <div class="card__img">
+                    <img src="./images/discover-1.png" alt="book flights">
+                  </div>
+                  <h3 class="card__title">Book Flight</h3>
+                  <p class="card__description">book memorable journey with our flight booking services! we're thrilled to present you flight options to suit your travel needs.</p>
+                </div>
+                <div class="card">
+                  <div class="card__img">
+                    <img src="./images/discover-1.png" alt="book flights">
+                  </div>
+                  <h3 class="card__title">Book Flight</h3>
+                  <p class="card__description">book memorable journey with our flight booking services! we're thrilled to present you flight options to suit your travel needs.</p>
+                </div>
+                <div class="card">
+                  <div class="card__img">
+                    <img src="./images/discover-1.png" alt="book flights">
+                  </div>
+                  <h3 class="card__title">Book Flight</h3>
+                  <p class="card__description">book memorable journey with our flight booking services! we're thrilled to present you flight options to suit your travel needs.</p>
+                </div>
+                <div class="card">
+                  <div class="card__img">
+                    <img src="./images/discover-1.png" alt="book flights">
+                  </div>
+                  <h3 class="card__title">Book Flight</h3>
+                  <p class="card__description">book memorable journey with our flight booking services! we're thrilled to present you flight options to suit your travel needs.</p>
+                </div>
+                
+
+
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
