add slick carousel js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+
+
   </head>
 
   <body>
@@ -109,6 +111,7 @@
     </header>
     <div class="wrapper">
       <main class="main">
+        <!-- section hero start -->
         <section class="section hero">
           <div class="hero__inner">
             <h2 class="section__title hero__title">
@@ -117,6 +120,9 @@
             <a class="hero__btn btn-primary" href="#">See offer</a>
           </div>
         </section>
+        <!-- section hero end -->
+
+        <!-- section services start -->
         <section class="section services">
           <div class="container">
             <div class="services__inner">
@@ -129,77 +135,127 @@
                 destination selection, flight and accommodation bookings, and
                 customized itineraries to individual preferences.
               </p>
-              <a class="services__link" href="#">see all</a>
-              <!-- cards start  -->
-              <div class="cards-wrapper">
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
+              <div class="cards">
+                <a class="services__link" href="#">see all</a>
+                <!-- cards start  -->
+                <div class="cards-wrapper">
+                  <div class="card">
+                    <img
+                      class="card__img"
+                      src="./images/discover-1.png"
+                      alt="book flights" />
 
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
+                    <div>
+                      <h3 class="card__title">Book Flight</h3>
+                      <p class="card__description">
+                        book memorable journey with our flight booking services!
+                        we're thrilled to present you flight options to suit
+                        your travel needs.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <!-- 2 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
+                  <!-- 2 -->
+                  <div class="card">
+                    <img
+                      class="card__img"
+                      src="./images/discover-1.png"
+                      alt="book flights" />
 
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
+                    <div>
+                      <h3 class="card__title">Book Flight</h3>
+                      <p class="card__description">
+                        book memorable journey with our flight booking services!
+                        we're thrilled to present you flight options to suit
+                        your travel needs.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <!-- 3 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
+                  <!-- 3 -->
+                  <div class="card">
+                    <img
+                      class="card__img"
+                      src="./images/discover-1.png"
+                      alt="book flights" />
 
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
+                    <div>
+                      <h3 class="card__title">Book Flight</h3>
+                      <p class="card__description">
+                        book memorable journey with our flight booking services!
+                        we're thrilled to present you flight options to suit
+                        your travel needs.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <!-- 4 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
+                  <!-- 4 -->
+                  <div class="card">
+                    <img
+                      class="card__img"
+                      src="./images/discover-1.png"
+                      alt="book flights" />
 
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
+                    <div>
+                      <h3 class="card__title">Book Flight</h3>
+                      <p class="card__description">
+                        book memorable journey with our flight booking services!
+                        we're thrilled to present you flight options to suit
+                        your travel needs.
+                      </p>
+                    </div>
                   </div>
+                  <!-- end -->
                 </div>
-                <!-- end -->
               </div>
             </div>
           </div>
         </section>
+        <!-- section services end -->
+
+        <!-- section video start -->
+        <section class="section video">
+          <div class="container">
+            <div class="video__inner">
+              <h2 class="section__title">Watch Our Memorable Trips</h2>
+              <div class="section__iframe">
+                <iframe
+                  src="https://www.youtube.com/embed/oSexfR0Ubzw?si=exWHoehYzcQo9Ve1"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- section video end -->
+        <!-- section services start -->
+        
+        <section class="section slick-carousel">
+          <div class="container">
+            <div class="services__inner">
+              <h2 class="section__title services__title">
+                Popular Tour Offers
+              </h2>
+              <div class="slider">
+                <!-- 1 -->
+                <div class="slider_item">
+                  <img src="./images/carousel-1.png" alt="" />
+                </div>
+                <!-- 2 -->
+                 <div class="slider_item">
+                  <img src="./images/carousel-2.png" alt="" />
+                </div>
+                <!-- 3 -->
+               <div class="slider_item">
+                  <img src="./images/carousel-3.png" alt="" />
+                </div>
+                <!--  -->
+              </div>
+            </div>
+          </div>
+        </section>
+
+        
       </main>
       <footer class="footer">
         <div class="container">
@@ -312,6 +368,10 @@
         </div>
       </footer>
     </div>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
 
     <script src="js/script.js"></script>
   </body>
