add silk styles

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-
-
   </head>
 
   <body>
@@ -229,7 +227,7 @@
         </section>
         <!-- section video end -->
         <!-- section services start -->
-        
+
         <section class="section slick-carousel">
           <div class="container">
             <div class="services__inner">
@@ -242,20 +240,20 @@
                   <img src="./images/carousel-1.png" alt="" />
                 </div>
                 <!-- 2 -->
-                 <div class="slider_item">
+                <div class="slider_item">
                   <img src="./images/carousel-2.png" alt="" />
                 </div>
                 <!-- 3 -->
-               <div class="slider_item">
+                <div class="slider_item">
                   <img src="./images/carousel-3.png" alt="" />
                 </div>
                 <!--  -->
+
+                <!-- end -->
               </div>
             </div>
           </div>
         </section>
-
-        
       </main>
       <footer class="footer">
         <div class="container">
