--- a/index.html
+++ b/index.html
@@ -236,19 +236,41 @@
               </h2>
               <div class="slider">
                 <!-- 1 -->
-                <div class="slider_item">
-                  <img src="./images/carousel-1.png" alt="" />
+                <div class="slider_item card">
+                  <img class="" src="./images/carousel-1.png" alt="" />
+                  <div class="card__info">
+                    <h3 class="card__title">Barcelona, Spain</h3>
+                    <span class="card__description"> 2 adults, 7 days </span>
+                    <span class="card__description"> 2400$ </span>
+                  </div>
                 </div>
                 <!-- 2 -->
-                <div class="slider_item">
-                  <img src="./images/carousel-2.png" alt="" />
+                <div class="slider_item card">
+                  <img class="" src="./images/carousel-1.png" alt="" />
+                  <div class="card__info">
+                    <h3 class="card__title">Barcelona, Spain</h3>
+                    <span class="card__description"> 2 adults, 7 days </span>
+                    <span class="card__description"> 2400$ </span>
+                  </div>
                 </div>
                 <!-- 3 -->
-                <div class="slider_item">
-                  <img src="./images/carousel-3.png" alt="" />
+                <div class="slider_item card">
+                  <img class="" src="./images/carousel-1.png" alt="" />
+                  <div class="card__info">
+                    <h3 class="card__title">Barcelona, Spain</h3>
+                    <span class="card__description"> 2 adults, 7 days </span>
+                    <span class="card__description"> 2400$ </span>
+                  </div>
                 </div>
                 <!--  -->
-
+                <div class="slider_item card">
+                  <img class="" src="./images/carousel-1.png" alt="" />
+                  <div class="card__info">
+                    <h3 class="card__title">Barcelona, Spain</h3>
+                    <span class="card__description"> 2 adults, 7 days </span>
+                    <span class="card__description"> 2400$ </span>
+                  </div>
+                </div>
                 <!-- end -->
               </div>
             </div>
